# liquidity-edge

./: README.md  pyproject.toml
model/: lgbm_model.joblib  ohe_encoder.joblib  y_test.csv  y_train.csv
notebooks/: 01_data_preparation_and_feature_engineering.ipynb  02_model_training_and_evaluation.ipynb
src/: backtesting.py  logger.py
