[project]
name = "liquidity-edge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=25.1.0",
    "ipykernel>=6.30.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
]
